update to index file

--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
      <a href="contact_info.html">my contact information</a>
      <hr>
      <h3>hobbies </h3>
-     <table cellspacing="10" >
-         <tr>
-            <td>2002</td> 
-        <td>birthday</td>
-        </tr>
-     </table>
+   <ul>
+       <li>instagram</li>
+       <li>surfing web</li>
+       <li>watching web series</li>
+   </ul>
      <hr > 
      <h3>skills</h3>
      <table cellspacing="10">
@@ -55,6 +54,6 @@
             </td>
          </tr>
      </table>
-     <hr>
+     
 </body>
 </html>
